# cpp_code_snippet

./: .gitignore  CMakeLists.txt  main.cpp
app/: stl_test.cpp
ceres/: 01_hello_world.cpp  02_numeric_diff.cpp  03_custom_jacobian.cpp  04_test_residual.cpp  05_fit_plane.cpp  06_relative_pose.cpp  07_fit_rotation.cpp  08_icp_rotation.cpp  ceres_common.h  eigenpose.cpp  eigenpose.h  pcl_common.cpp  pcl_common.h
cpp_usage/: 01_hash_map.cpp  02_forward_as_tuple.cpp  03_use_deque.cpp  04_map_find.cpp  05_vector_remove.cpp  06_heap_usage.cpp  07_union_usage.cpp  operator_overload.cpp  parse_png_head.cpp
eigen/: 01_basic_usage.cpp  02_block.cpp  03_test_pose.cpp  eskf_imu.cpp  t_iteration.cpp  t_iteration1.cpp  t_iteration2.cpp
eskf/: eskf.cpp
g2o/: t_iteration2.cpp  t_iteration_g2o.cpp  type_p2_line.h
gtsam/: 01_gtsam.cpp  02_gtsam.cpp  03_gtsam.cpp  03_pose3_estimate.cpp  04_test_prior.cpp  05_optimize_odom_and_prior.cpp  06_test_noise_meaning.cpp  07_test_gps_fusion.cpp  08_custom_factor.cpp  09_between_rotation.cpp  10_compose_factor.cpp  11_limitz_factor.cpp  eigenpose.h  temp.cpp
pcl/: icp_with_trans.cpp  new_point_type.cpp  pcl_common.h  pcl_deque.cpp  test_icp.cpp
